complete meta data && translations

--- a/src/assets/i18n/en/admin.json
+++ b/src/assets/i18n/en/admin.json
@@ -9,5 +9,51 @@
   "base-data": "Base Data",
   "mainPage": "Main Page",
   "role_command_hint": "Roles",
-  "selectRole":"Select Role"
+  "selectRole":"Select Role",
+  "account": "Account",
+  "accTransaction": "Transaction",
+  "branch": "Branch",
+  "business": "Business",
+  "customer": "Customer",
+  "department": "Department",
+  "employee": "Employee",
+  "individual": "Individual",
+  "officer": "Officer",
+  "product": "Product",
+  "productType": "ProductType",
+  "birthDate":"Birth Date",
+  "firstName":"First Name",
+  "lastName":"Last Name",
+  "availBalance":"Available Balance",
+  "closeDate":"Close Date",
+  "lastActivityDate":"Last Activity Date",
+  "openDate":"Open Date",
+  "pendingBalance":"Pending Balance",
+  "status":"Status",
+  "openBranch":"Open Branch",
+  "openEmp":"Open Employee",
+  "address":"Address",
+  "city":"City",
+  "name":"Name",
+  "state":"State",
+  "zipCode":"ZipCode",
+  "incorpDate":"Incorp Date",
+  "customerType":"Customer Type",
+  "fedId":"Fed",
+  "postalCode":"Postal Code",
+  "endDate":"End Date",
+  "startDate":"Start Date",
+  "assignBranch":"Assign Branch",
+  "superiorEmp":"Superior Employee",
+  "dateOffered":"Offered Date",
+  "dateRetired":"Retired Date",
+  "code":"Code",
+  "amount":"Amount",
+  "fundsAvailDate":"Funds Available Date",
+  "txnDate":"Txn Date",
+  "txnTypeCd":"Txn Type",
+  "executionBranch":"Execution Branch",
+  "tellerEmp":"Teller Employee"
+
+
 }
