--- a/src/assets/i18n/en/admin.json
+++ b/src/assets/i18n/en/admin.json
@@ -8,7 +8,7 @@
   "new": "New",
   "base-data": "Base Data",
   "mainPage": "Main Page",
-  "role_command_hint": "Roles",
+  "role_command_tooltip": "Roles",
   "selectRole": "Select Role",
   "account": "Account",
   "accTransaction": "Transaction",
